--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -1,7 +1,7 @@
 steps:
   gctsExecuteABAPUnitTests:
-    host: 'https://abap.server.com:port'
-    client: '000'
+    host: 'https://63.32.62.246:44301'
+    client: '100'
     abapCredentialsId: 'ABAPUserPasswordCredentialsId'
-    repository: 'myrepo'
+    repository: 'gcts_test'
     verbose: true
