--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -3,5 +3,5 @@ steps:
     host: 'http://63.32.62.246:8200'
     client: '100'
     abapCredentialsId: 'ABAPUserPasswordCredentialsId'
-    repository: 'gcts_test'
+    repository: 'leonburkhardt-gcts_test'
     verbose: true
